@@ -134,7 +134,7 @@ Specify an alternative system wide initialization file (default: /usr/local/etc/
 The \fBcommands\fP string will be executed after exiting the interactive loop of the program (right before terminating the program).
 .TP
 .B \-h, \-\-help[=s|d|l|m]
-		 Print (short, descriptive, long, or complete man) program invocation help, and terminate.
+		 Print (short, descriptive, long, or complete man) program invocation help, and exit.
 .TP
 .B \-D {filename}, \-\-load\-image\-descriptions\-file {filename}
 Load image descriptions from {filename}. In {filename} each line is the name of an image file (its basename will be taken), then a Tab character (unless \-\-image\-descriptions\-file\-separator specifies otherwise), then the description text. Each description will be put in the _comment variable of the image at load time. Will override the comment eventually loaded from the file (e.g. JPEG, PNG or TIFF comment). Special comment lines like "#!fim:var=val" will lead i:var to be assigned value val (unquoted) at image loading time. Special description lines begin with markers:  with "#!fim:=" the last description line to be used; with "#!fim:+" what follows + will be appended to the last description line; with "#!fim:^" what follows ^ will be prepended to the last description line; with "#!fim:s/f/t" the last description line will be used, but occurrences of string f will be substituted with string t (f and t can contain anything but not a /). If val is empty that variable will be unset. These variables are stored also in an internal index used by the limit command. This option sets _caption_over_image=2, so that a caption will be displayed over the image.
@@ -231,7 +231,7 @@ Randomly shuffle the files list before browsing (no seeding).
 Be verbose: show status bar.
 .TP
 .B \-V, \-\-version
-Display program version, compile flags, enabled features, linked libraries information, supported filetypes/file loaders, and then terminate.
+Print to stdout program version, compile flags, enabled features, linked libraries information, supported filetypes/file loaders, and then exit.
 .TP
 .B \-w, \-\-autowidth
 Scale the image according to the screen width.
