@@ -325,7 +325,7 @@ limit [{expression} |{variable} {value}] : A browsable file list filtering funct
 .B
 list
 .fi
-list : display the files list; list 'random_shuffle': randomly shuffle the file list; list 'reverse': reverse the file list; list 'clear': clear the file list; list 'sort': sort the file list; list 'sort_basename': sort the file list according to base name; list 'sort_fsize': sort the file list according to file size; list 'sort_mdate': sort the file list according to modification date; list 'pop' : pop the last file from the files list; list 'remove' [{filename(s)}] : remove the current file, or the {filename(s)}, if specified ; list {filename(s)} 'push': push {filename(s)} to the back of the files list; list 'filesnum': display the number of files in the files list; list 'mark' [{args}] : mark image file names for stdout printing at exit, with {args} mark the ones matching according to the rules of the 'limit' command, otherwise the current file; list 'unmark' [{args}] : unmark marked image file names, with {args} unmark the ones matching according to the rules of the 'limit' command, otherwise the current file; list 'marked': show which files have been marked so far; list 'pushdir; {dirname}: will push all the files in {dirname}, when matching the regular expression in variable _pushdir_re or, if empty, from constant regular expression \.JPG$\:|\.PNG$\:|\.GIF$\:|\.BMP$\:|\.TIFF$\:|\.TIF$\:|\.JPEG$\:|\.JFIF$\:|\.PPM$\:|\.PGM$\:|\.PBM$\:|\.PCX$\:; list 'pushdirr' {dirname}: like pushdir, but will also push encountered directory entries recursively. Of the above commands, several will be temporarily non available for the duration of a background load (enabled by \-\-recursive\-background), which will last until _loading_in_background is 0. 
+list : display the files list; list 'random_shuffle': randomly shuffle the file list; list 'reverse': reverse the file list; list 'clear': clear the file list; list 'sort': sort the file list; list 'sort_basename': sort the file list according to base name; list 'sort_fsize': sort the file list according to file size; list 'sort_mdate': sort the file list according to modification date; list 'pop' : pop the last file from the files list; list 'remove' [{filename(s)}] : remove the current file, or the {filename(s)}, if specified ; list {filename(s)} 'push': push {filename(s)} to the back of the files list; list 'filesnum': display the number of files in the files list; list 'mark' [{args}] : mark image file names for stdout printing at exit, with {args} mark the ones matching according to the rules of the 'limit' command, otherwise the current file; list 'unmark' [{args}] : unmark marked image file names, with {args} unmark the ones matching according to the rules of the 'limit' command, otherwise the current file; list 'marked': show which files have been marked so far; list 'dumpmarked': dump to stdout the marked files (you will want usually to 'unmarkall' afterwards); list 'unmarkall': unmark all the marked files; list 'pushdir; {dirname}: will push all the files in {dirname}, when matching the regular expression in variable _pushdir_re or, if empty, from constant regular expression \.JPG$\:|\.PNG$\:|\.GIF$\:|\.BMP$\:|\.TIFF$\:|\.TIF$\:|\.JPEG$\:|\.JFIF$\:|\.PPM$\:|\.PGM$\:|\.PBM$\:|\.PCX$\:; list 'pushdirr' {dirname}: like pushdir, but will also push encountered directory entries recursively. Of the above commands, several will be temporarily non available for the duration of a background load (enabled by \-\-recursive\-background), which will last until _loading_in_background is 0. 
 .fi
 
 .na
